Added step class and base test generic functionalities